# paur

./: .gitignore  Cargo.toml  DESIGN.md  README.md
container/: Dockerfile  build.sh
crates/paur-aur/: Cargo.toml
crates/paur-aur/src/: lib.rs  srcinfo.rs
crates/paur-builder/: Cargo.toml
crates/paur-builder/src/: lib.rs
crates/paur-cli/: Cargo.toml
crates/paur-cli/src/: client.rs  cmd.rs  lib.rs  main.rs  output.rs
crates/paur-core/: Cargo.toml
crates/paur-core/src/: auth.rs  build_flags.rs  config.rs  error.rs  lib.rs  logging.rs  name.rs  paths.rs
crates/paur-daemon/: Cargo.toml
crates/paur-daemon/src/: api.rs  auth.rs  lib.rs  main.rs  poller.rs  repo.rs  worker.rs
crates/paur-db/: Cargo.toml
crates/paur-db/migrations/: 0001_init.sql  0002_sessions.sql  0003_build_seq.sql  0004_build_flags.sql  0005_variants.sql
crates/paur-db/src/: lib.rs  models.rs  queries.rs  schema.rs
crates/paur-db/tests/: integration.rs
crates/paur-repo/: Cargo.toml
crates/paur-repo/src/: lib.rs
crates/paur-s3/: Cargo.toml
crates/paur-s3/src/: lib.rs
crates/paur-s3/tests/: integration.rs
deploy/: Caddyfile  Caddyfile.public  Caddyfile.s3  README.linux.md  README.md  paur.service  paur.toml.example  webui-deploy.sh
web/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  auth.ts
web/src/lib/components/: DeploymentTable.svelte  StatCard.svelte  StatusBadge.svelte  VariantBadge.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/builds/[id]/: +page.svelte
web/src/routes/install/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/pubkey/: +page.svelte
web/src/routes/queue/: +page.svelte
