[workspace]
resolver = "2"
members = [
    "crates/paur-core",
    "crates/paur-db",
    "crates/paur-aur",
    "crates/paur-builder",
    "crates/paur-repo",
    "crates/paur-daemon",
    "crates/paur-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/local/paur"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = "1"
# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Errors
anyhow = "1"
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Config
toml = "0.8"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Misc
once_cell = "1"
async-trait = "0.1"
regex = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Internal
paur-core = { path = "crates/paur-core" }
paur-aur = { path = "crates/paur-aur" }
paur-builder = { path = "crates/paur-builder" }
paur-repo = { path = "crates/paur-repo" }
paur-db = { path = "crates/paur-db" }
paur-daemon = { path = "crates/paur-daemon" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
