[package]
name = "paur-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI front-end for paur (talks to the daemon's HTTP API)"

[[bin]]
name = "paur-cli"
path = "src/main.rs"

[dependencies]
paur-core = { workspace = true }
paur-db = { workspace = true }
paur-repo = { workspace = true }
paur-daemon = { workspace = true }
paur-builder = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
