[package]
name = "paur-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build queue worker + HTTP API for paur"

[[bin]]
name = "paur"
path = "src/main.rs"

[dependencies]
paur-core = { workspace = true }
paur-db = { workspace = true }
paur-aur = { workspace = true }
paur-builder = { workspace = true }
paur-repo = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
