[package]
name = "paur-repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pacman repo + GPG signing for paur"

[dependencies]
paur-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
